<resources>
    <string name="app_name">OncoBuddy</string>
    <string name="mix_panel_token">5aeda5e9ddbf5d68b0d0447b74b62b87</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login Now</string>
    <string name="login_to_your_account">Sign in to your account</string>
    <string name="remember_me">Remember me</string>
    <string name="signup_here">Signup here</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_now">Register Now</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="blood_group">Blood Group</string>
    <string name="address">Enter address</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="verify_now">Verify Now</string>
    <string name="enter_your_mobile_number">Enter mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="add_record">Add Record</string>
    <string name="choose_from_media">Upload\nPDF</string>
    <string name="record_type">Record type</string>
    <string name="are_you_sure_you_want_to_delete_this_record">Are you sure you want to delete this record?</string>
    <string name="are_you_sure_you_want_to_delete_this_comment">Are you sure you want to delete this comment?</string>
    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>
    <string name="are_you_sure_you_want_to_send_rr">Are you sure you want to send reschedule request to the patient?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="appointments">Appointments</string>
    <string name="create_new_appointment">Create New Appointment</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="past_appointments">Past appointments</string>
    <string name="view">View</string>
    <string name="report_type">Report Categories</string>
    <string name="appointment_id">Appointment ID : </string>
    <string name="name">Name</string>
    <string name="purpose">Purpose</string>
    <string name="doctor_details">Doctor Details :</string>
    <string name="new_appointment">New Appointment</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="doctor_name">Enter doctor Name</string>
    <string name="select_time_slot">Select time slot</string>
    <string name="continue_1">Continue</string>
    <string name="apply_filter">Apply Filters</string>
    <string name="filters">Filters</string>
    <string name="date">Date</string>
    <string name="are_you_sure_you_want_to_cancel_this_appointment">Are you sure you want to cancel this appointment?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="go_back_to_appointments">Go back to Appointments</string>
    <string name="msg_add_care_taker">Would you like to add a family member or care giver during the appointment?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="message">Message</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_relative_name">Please enter member name</string>
    <string name="add_member">ADD MEMBER</string>
    <string name="add_doctor_s_name">Add Doctor\'s Name</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="add_patient">Add Patient</string>
    <string name="view_all">View all</string>
    <string name="select_file">Select File</string>
    <string name="scan_report_using_camera">Upload Image</string>
    <string name="update_record">Update Record</string>
    <string name="permission_necessary">Permissions needed</string>
    <string name="external_storage_permission_needed">File access permissions needed to show file.</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="document_preview">Document Preview</string>
    <string name="my_profile">My Profile</string>
    <string name="my_doctors">My Doctors</string>
    <string name="doctors">Doctors</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="my_caregiver">My Caregiver</string>
    <string name="app_help">App help</string>
    <string name="about_4basecare">About 4BaseCare</string>
    <string name="msg_permission_denied">Permission Denied</string>
    <string name="msg_permission_from_settings">Permission is denied, Please allow permissions from App Settings.</string>
    <string name="msg_allow_permission">Please allow request permission</string>
    <string name="title_app_settings">App Settings</string>
    <string name="scan_report">Scan report</string>
    <string name="save">Save</string>
    <string name="selected_images">Selected images</string>
    <string name="validation_enter_name">Please enter your name</string>
    <string name="validation_enter_role">Please select your role</string>
    <string name="validation_enter_email">Please enter your email</string>
    <string name="validation_verify_mobile_number">Please verify your mobile number</string>
    <string name="validation_enter_valid_email">Please enter valid email</string>
    <string name="validation_enter_mobile_number">Please enter mobile number</string>
    <string name="validation_invalid_mobile_number">Mobile number should contain exact 10 digits</string>
    <string name="validation_mobile_number_repeated">This number is already added</string>
    <string name="validation_enter_consultation_fees">Please enter consultation fees</string>
    <string name="validation_enter_minimum_consultation_fees">Consultation fees should be atleast 100 rs.</string>
    <string name="validation_enter_specialization">Please enter specialization</string>
    <string name="validation_enter_hospital">Please select hospital</string>
    <string name="validation_enter_designation">Please enter designation</string>
    <string name="validation_enter_valid_location">Please enter location from suggestions only</string>
    <string name="validation_enter_password">Please enter your password</string>
    <string name="validation_enter_confirm_password">Please confirm your password</string>
    <string name="validation_passwords_not_same">Passwords are not same!</string>
    <string name="validation_terms_not_read">Please read Terms and Conditions before proceeding</string>
    <string name="validation_privacy_policy_read">Please read privacy policy before proceeding</string>
    <string name="validation_agree_terms_privacy_policy">Please agree Terms and Conditions and Privacy Policy before proceeding</string>
    <string name="validation_password_min_length">Password should contain atleast 6 letters.</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="report_tags">Report Sub Categories</string>
    <string name="default_notification_channel_id" translatable="false">four_base_care_notifications</string>
    <string name="fcm_message">FCM Message</string>
    <string name="no_records_found">No record found!</string>
    <string name="no_appointment_found">No appointment found!</string>
    <string name="next">Next</string>
    <string name="select_doctor_msg">Please select doctor to get time slots</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="please_check_internet_connection">Please check your internet connection</string>
    <string name="record_added_successfully">Your record has been added successfully!</string>
    <string name="go_back_to_record_listings">Go back to Records</string>
    <string name="validation_select_doctor">Please select doctor</string>
    <string name="validation_select_appointment_time">Please select appointment time</string>
    <string name="edit_profile">Edit profile</string>
    <string name="select_cancer_type">Select cancer type</string>
    <string name="select_cancer_subtype">Select Cancer Subtype</string>
    <string name="you_cant_change_your_number">You cannot change your phone number.</string>
    <string name="you_cant_change_your_email">You cannot change your E mail.</string>
    <string name="you_cannot_add_more_than_3_emergency_contact">You cannot add more than 3 emergency contacts</string>
    <string name="emergency_contact_listing">Emergency contact listing</string>
    <string name="no_sub_type_found">No sub types found for this cancer type.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="submit">Submit</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="permissions_needed">Permissions needed</string>
    <string name="appointment_room">Appointment room</string>
    <string name="skip">Skip</string>
    <string name="secure_payments_by_razorpay">Secure Payments by Razorpay</string>
    <string name="validation_enter_otp">Please enter an OTP</string>
    <string name="validation_enter_new_password">Please enter new password</string>
    <string name="skip_to_login">Skip to Login ></string>
    <string name="let_us_help_you">Let us help you</string>
    <string name="platform">Platform</string>
    <string name="login_title">Login</string>
    <string name="register_here">Register here!</string>
    <string name="not_a_user_yet">Not a user yet?</string>
    <string name="enter_the_otp_sent_to_your_phone">Enter the OTP sent to your phone</string>
    <string name="not_correct">Not correct?</string>
    <string name="kindly_fill_the_details_below">Kindly fill the details below</string>
    <string name="care_taker">Care Giver</string>
    <string name="fill_your_care_taker_s_details">Fill your care giver\'s details</string>
    <string name="fill_your_care_assistant_s_details">Fill your care assistant\'s details</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="just_a_knowledge_seeker">Just a Knowledge Seeker</string>
    <string name="select_role">Select Role</string>
    <string name="who_are_you_tell_about_yourself_for_a_better_experience">Please select your role for a better experience</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="already_a_user">Already a user?</string>
    <string name="login_here">Login here!</string>
    <string name="back">&lt; Back</string>
    <string name="secure_your_records">Secure your records!</string>
    <string name="now_add_your_documents_before_booking_an_appointment_with_your_doctor_and_forget_about_losing_them_again_forever">Now add your documents before booking an appointment with your doctor and forget about losing them again forever.</string>
    <string name="upload_now">Upload Now</string>
    <string name="total_size">Total Size</string>
    <string name="reports">Reports</string>
    <string name="bills">Bills</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="trending_forums">TRENDING BLOGS</string>
    <string name="home">Home</string>
    <string name="records">Records</string>
    <string name="patients">Patients</string>
    <string name="comments">Comments</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_password">Change password</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="create_new_password">Create new password</string>
</resources>