<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<com.oncobuddy.app.utils.container_classes.SlidingLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/_7sdp"
    android:background="@drawable/slot_card_bg"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:visibility="gone"
        android:src="@drawable/gray_circle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMsg"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/are_you_sure_you_want_to_delete_this_record"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/title_text_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">
            <Button
                android:id="@+id/btnCancel"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/AppCommonButton"
                android:background="@drawable/cancel_button_white_bg"
                android:textColor="@color/text_dark_gray"
                android:text="@string/cancel"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">
            <Button
                android:id="@+id/btnDelete"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/AppCommonButton"
                android:text="@string/delete"
                />
        </LinearLayout>

    </LinearLayout>


</com.oncobuddy.app.utils.container_classes.SlidingLinearLayout>
</layout>