<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <com.oncobuddy.app.utils.container_classes.SlidingRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RootBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/root_padding"
        android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nov_logo_onco_buddy"
                android:layout_marginTop="@dimen/_40sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:text="@string/reset_pwd"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@color/font_light_black"

                />

            <RelativeLayout
                style="@style/NovCommonEditTextBoxContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/NovCommonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivShowHidePwd"
                    android:hint="@string/create_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/ivShowHidePwd"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_hide_pwd" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/NovCommonEditTextBoxContainer"
                >

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/NovCommonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </RelativeLayout>



            <TextView
                android:id="@+id/tvGetStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                style="@style/NovAppCommonButton"
                android:text="@string/change_password"
                android:layout_marginTop="@dimen/_20sdp"
                />

        </LinearLayout>
    </RelativeLayout>
    </ScrollView>

        <include android:id="@+id/layoutProgress"
            layout="@layout/progress_bar"/>

    </com.oncobuddy.app.utils.container_classes.SlidingRelativeLayout>
</layout>