<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<com.oncobuddy.app.utils.container_classes.SlidingLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ivLogo"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="0dp"
            android:src="@drawable/logo_cancel_appointment" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitleText"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/are_you_sure_you_want_to_cancel_this_appointment"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/title_text_color"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/gray_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/linNo"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            >
            <Button
                android:id="@+id/btnNo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/AppCommonButton"
                android:background="@drawable/cancel_button_white_bg"
                android:textColor="@color/text_dark_gray"
                android:text="@string/no"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linYes"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp">
            <Button
                android:id="@+id/btnYes"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/AppCommonButton"
                android:text="@string/yes"
                />
        </LinearLayout>

    </LinearLayout>


</com.oncobuddy.app.utils.container_classes.SlidingLinearLayout>
</layout>